--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,28 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- unpkg -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@egjs/flicking/dist/flicking.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@egjs/flicking/dist/flicking-inline.css"
+      crossorigin="anonymous"
+    />
+    <!-- cdnjs -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking-inline.css"
+      crossorigin="anonymous"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,5 +61,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- unpkg -->
+    <script
+      src="https://unpkg.com/@egjs/flicking/dist/flicking.pkgd.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- cdnjs -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.pkgd.min.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
